thirdparty/boost/libs/bimap/test/compile_fail/.uuid
62327c2a-636d-410e-be87-b5c58948f408